[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/PBack.gd" type="Script" id=1]
[ext_resource path="res://Backgrounds/JoinBack.png.png" type="Texture" id=2]
[ext_resource path="res://sky.png" type="Texture" id=3]

[node name="ParallaxBackground" type="ParallaxBackground"]
offset = Vector2( 0, -30 )
transform = Transform2D( 1, 0, 0, 1, 0, -30 )
script = ExtResource( 1 )

[node name="buildings" type="ParallaxLayer" parent="."]

[node name="Sprite1" type="Sprite" parent="buildings"]
position = Vector2( 1015, 305 )
scale = Vector2( 0.8, 0.7 )
texture = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="buildings"]
position = Vector2( 5009, 305 )
scale = Vector2( 0.8, 0.7 )
texture = ExtResource( 2 )

[node name="sky" type="ParallaxLayer" parent="."]
show_behind_parent = true

[node name="Sprite" type="Sprite" parent="sky"]
show_behind_parent = true
position = Vector2( 0, 280 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 3 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="sky/Sprite"]

[connection signal="viewport_exited" from="sky/Sprite/VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_exited"]
